--- a/sass/modules/_sections.scss
+++ b/sass/modules/_sections.scss
@@ -1,4 +1,4 @@
 
 .links {
-  //@include blockpane;
+  @include blockpane;
 }
